Prevent line wrapping board squares

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@ body {
     height: 50%;
     width: 50%;
     padding: 10px;
+    white-space: nowrap;
 }
 
 .square {
